patch to the security hole when URL cut/pasted