@@ -33,6 +33,7 @@ import oscar.MyDateFormat;
 
 import com.quatro.common.KeyConstants;
 import com.quatro.model.LookupCodeValue;
+import com.quatro.model.security.NoAccessException;
 import com.quatro.service.IntakeManager;
 import com.quatro.service.LookupManager;
 import com.quatro.util.Utility;
@@ -58,178 +59,297 @@ public class QuatroIntakeEditAction extends BaseClientAction {
 	// for new client
 	public ActionForward create(ActionMapping mapping, ActionForm form,
 			HttpServletRequest request, HttpServletResponse response) {
-		QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
-
-		String clientId = qform.getClientId();
-		Integer intakeId = Integer.valueOf(qform.getIntakeId());
-		HashMap actionParam = (HashMap) request.getAttribute("actionParam");
-		if (actionParam == null) {
-			actionParam = new HashMap();
-			actionParam.put("clientId", clientId);
-			actionParam.put("intakeId", intakeId.toString());
-		}
-		request.setAttribute("actionParam", actionParam);
-
-		Demographic client;
-		if (Integer.parseInt(clientId) > 0) {
-			client = clientManager.getClientByDemographicNo(clientId);
-			qform.setDob(MyDateFormat.getStandardDate(client.getDateOfBirth()));
-		} else {
-			client = new Demographic();
-			qform.setDob("");
-		}
-		qform.setClient(client);
-
-		com.quatro.web.intake.OptionList optionValues = intakeManager
-				.LoadOptionsList(true);
-		qform.setOptionList(optionValues);
-
-		Integer shelterId = (Integer) request.getSession().getAttribute(
-				KeyConstants.SESSION_KEY_SHELTERID);
-		ArrayList lst = (ArrayList) programManager.getProgramIds(shelterId,
-				(String) request.getSession().getAttribute(
+		try {
+			QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
+	
+			String clientId = qform.getClientId();
+			Integer intakeId = Integer.valueOf(qform.getIntakeId());
+			HashMap actionParam = (HashMap) request.getAttribute("actionParam");
+			if (actionParam == null) {
+				actionParam = new HashMap();
+				actionParam.put("clientId", clientId);
+				actionParam.put("intakeId", intakeId.toString());
+			}
+			request.setAttribute("actionParam", actionParam);
+	
+			Demographic client;
+			if (Integer.parseInt(clientId) > 0) {
+				client = clientManager.getClientByDemographicNo(clientId);
+				qform.setDob(MyDateFormat.getStandardDate(client.getDateOfBirth()));
+			} else {
+				client = new Demographic();
+				qform.setDob("");
+			}
+			qform.setClient(client);
+	
+			com.quatro.web.intake.OptionList optionValues = intakeManager
+					.LoadOptionsList(true);
+			qform.setOptionList(optionValues);
+	
+			Integer shelterId = (Integer) request.getSession().getAttribute(
+					KeyConstants.SESSION_KEY_SHELTERID);
+			ArrayList lst = (ArrayList) programManager.getProgramIds(shelterId,
+					(String) request.getSession().getAttribute(
+							KeyConstants.SESSION_KEY_PROVIDERNO));
+			ArrayList lst2 = new ArrayList();
+			ArrayList lst3 = new ArrayList();
+			for (int i = 0; i < lst.size(); i++) {
+				Object[] obj = (Object[]) lst.get(i);
+				lst2.add(new LabelValueBean((String) obj[1], ((Integer) obj[0])
+						.toString()));
+				lst3.add(new LabelValueBean((String) obj[2], ((Integer) obj[0])
+						.toString()));
+			}
+			qform.setProgramList(lst2);
+			qform.setProgramTypeList(lst3);
+	
+			QuatroIntake obj;
+			if (intakeId.intValue() != 0) {
+				obj = intakeManager.getQuatroIntake(intakeId);
+			} else {
+				obj = new QuatroIntake();
+				obj.setCreatedOn(Calendar.getInstance());
+				obj.setId(new Integer(0));
+				obj.setClientId(Integer.valueOf(qform.getClientId()));
+				obj.setIntakeStatus(KeyConstants.INTAKE_STATUS_ACTIVE);
+				obj.setStaffId((String) request.getSession().getAttribute(
 						KeyConstants.SESSION_KEY_PROVIDERNO));
-		ArrayList lst2 = new ArrayList();
-		ArrayList lst3 = new ArrayList();
-		for (int i = 0; i < lst.size(); i++) {
-			Object[] obj = (Object[]) lst.get(i);
-			lst2.add(new LabelValueBean((String) obj[1], ((Integer) obj[0])
-					.toString()));
-			lst3.add(new LabelValueBean((String) obj[2], ((Integer) obj[0])
-					.toString()));
-		}
-		qform.setProgramList(lst2);
-		qform.setProgramTypeList(lst3);
-
-		QuatroIntake obj;
-		if (intakeId.intValue() != 0) {
-			obj = intakeManager.getQuatroIntake(intakeId);
-		} else {
-			obj = new QuatroIntake();
-			obj.setCreatedOn(Calendar.getInstance());
-			obj.setId(new Integer(0));
-			obj.setClientId(Integer.valueOf(qform.getClientId()));
-			obj.setIntakeStatus(KeyConstants.INTAKE_STATUS_ACTIVE);
-			obj.setStaffId((String) request.getSession().getAttribute(
-					KeyConstants.SESSION_KEY_PROVIDERNO));
-			obj.setYouth(KeyConstants.CONSTANT_NO);
-			obj.setVAW(KeyConstants.CONSTANT_NO);
-		}
-
-		obj.setCurrentProgramId(obj.getProgramId());
-		qform.setIntake(obj);
-
-		request.setAttribute("intakeHeadId", new Integer(0)); // intakeHeadId:
-																// for intake
-																// stauts='discharged'
-																// or 'rejected'
-																// to view
-																// family
-																// details.
-
-		LookupCodeValue language;
-		LookupCodeValue originalCountry;
-		if (intakeId.intValue() != 0) {
-			if (obj.getLanguage() != null) {
-				language = lookupManager
-						.GetLookupCode("LNG", obj.getLanguage());
+				obj.setYouth(KeyConstants.CONSTANT_NO);
+				obj.setVAW(KeyConstants.CONSTANT_NO);
+			}
+	
+			obj.setCurrentProgramId(obj.getProgramId());
+			qform.setIntake(obj);
+	
+			request.setAttribute("intakeHeadId", new Integer(0)); // intakeHeadId:
+																	// for intake
+																	// stauts='discharged'
+																	// or 'rejected'
+																	// to view
+																	// family
+																	// details.
+	
+			LookupCodeValue language;
+			LookupCodeValue originalCountry;
+			if (intakeId.intValue() != 0) {
+				if (obj.getLanguage() != null) {
+					language = lookupManager
+							.GetLookupCode("LNG", obj.getLanguage());
+				} else {
+					language = new LookupCodeValue();
+				}
+				if (obj.getOriginalCountry() != null) {
+					originalCountry = lookupManager.GetLookupCode("CNT", obj
+							.getOriginalCountry());
+				} else {
+					originalCountry = new LookupCodeValue();
+				}
 			} else {
 				language = new LookupCodeValue();
-			}
-			if (obj.getOriginalCountry() != null) {
-				originalCountry = lookupManager.GetLookupCode("CNT", obj
-						.getOriginalCountry());
-			} else {
 				originalCountry = new LookupCodeValue();
 			}
-		} else {
-			language = new LookupCodeValue();
-			originalCountry = new LookupCodeValue();
-		}
-
-		qform.setLanguage(language);
-		qform.setOriginalCountry(originalCountry);
-
-		request.setAttribute("newClientFlag", "true");
-		request.setAttribute("isReadOnly", Boolean.FALSE);
-		setProgramEditable(request, obj, null);
-		super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-		return mapping.findForward("edit");
+	
+			qform.setLanguage(language);
+			qform.setOriginalCountry(originalCountry);
+	
+			request.setAttribute("newClientFlag", "true");
+			request.setAttribute("isReadOnly", Boolean.FALSE);
+			setProgramEditable(request, obj, null);
+			super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+			return mapping.findForward("edit");
+	       }
+	       catch(NoAccessException e)
+	       {
+		       return mapping.findForward("failure");
+	       }
 	}
 
 	// for existing client
 	public ActionForward update(ActionMapping mapping, ActionForm form,
 			HttpServletRequest request, HttpServletResponse response) {
-		QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
-
-		String clientId = qform.getClientId();
-		Integer intakeId = Integer.valueOf(qform.getIntakeId());
-		HashMap actionParam = (HashMap) request.getAttribute("actionParam");
-		if (actionParam == null) {
-			actionParam = new HashMap();
-			actionParam.put("clientId", clientId);
-			actionParam.put("intakeId", intakeId.toString());
-		}
-		request.setAttribute("actionParam", actionParam);
-		Integer intakeHeadId = intakeManager.getIntakeFamilyHeadId(intakeId
-				.toString());
-		if (intakeHeadId.intValue() != 0) {
-			Integer intakeHeadClientId = intakeManager
-					.getQuatroIntakeDBByIntakeId(intakeHeadId).getClientId();
-			request.setAttribute("clientId", intakeHeadClientId);
-			request.setAttribute("intakeHeadId", intakeHeadId); // intakeHeadId:
-																// for intake
-																// stauts='discharged'
-																// or 'rejected'
-																// to view
-																// family
-																// details.
-		} else {
-			request.setAttribute("clientId", clientId);
-			request.setAttribute("intakeHeadId", new Integer(0)); // intakeHeadId:
-																	// for
-																	// intake
+		try {
+			QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
+	
+			String clientId = qform.getClientId();
+			Integer intakeId = Integer.valueOf(qform.getIntakeId());
+			HashMap actionParam = (HashMap) request.getAttribute("actionParam");
+			if (actionParam == null) {
+				actionParam = new HashMap();
+				actionParam.put("clientId", clientId);
+				actionParam.put("intakeId", intakeId.toString());
+			}
+			request.setAttribute("actionParam", actionParam);
+			Integer intakeHeadId = intakeManager.getIntakeFamilyHeadId(intakeId
+					.toString());
+			if (intakeHeadId.intValue() != 0) {
+				Integer intakeHeadClientId = intakeManager
+						.getQuatroIntakeDBByIntakeId(intakeHeadId).getClientId();
+				request.setAttribute("clientId", intakeHeadClientId);
+				request.setAttribute("intakeHeadId", intakeHeadId); // intakeHeadId:
+																	// for intake
 																	// stauts='discharged'
-																	// or
-																	// 'rejected'
+																	// or 'rejected'
 																	// to view
 																	// family
 																	// details.
-		}
+			} else {
+				request.setAttribute("clientId", clientId);
+				request.setAttribute("intakeHeadId", new Integer(0)); // intakeHeadId:
+																		// for
+																		// intake
+																		// stauts='discharged'
+																		// or
+																		// 'rejected'
+																		// to view
+																		// family
+																		// details.
+			}
+	
+			request.setAttribute("fromManualReferralId", request
+					.getParameter("fromManualReferralId"));
+	
+			Demographic client;
+			if (Integer.parseInt(clientId) > 0) {
+				client = clientManager.getClientByDemographicNo(clientId);
+				qform.setDob(MyDateFormat.getStandardDate(client.getDateOfBirth()));
+			} else {
+				client = new Demographic();
+				qform.setDob("");
+			}
+			qform.setClient(client);
+			request.setAttribute("client", client);
+	
+			boolean readOnly = false;
+			QuatroIntake intake;
+			if (intakeId.intValue() != 0) {
+				intake = intakeManager.getQuatroIntake(intakeId);
+				if (KeyConstants.PROGRAM_TYPE_Service.equals(intake
+						.getProgramType())) {
+					if (intake.getEndDate() != null
+							&& intake.getEndDate().before(Calendar.getInstance()))
+						intake.setIntakeStatus(KeyConstants.STATUS_INACTIVE);
+				}
+				if (KeyConstants.INTAKE_STATUS_ADMITTED.equals(intake
+						.getIntakeStatus())) {
+					request.setAttribute("ageGenderReadOnly", Boolean.TRUE);
+				}
+				readOnly = super.isReadOnly(request, intake
+						.getIntakeStatus(), KeyConstants.FUN_CLIENTINTAKE, intake
+						.getProgramId());
+				request.setAttribute("isReadOnly", Boolean.valueOf(readOnly));
+			} else {
+				intake = new QuatroIntake();
+				intake.setCreatedOn(Calendar.getInstance());
+				intake.setId(new Integer(0));
+				intake.setClientId(Integer.valueOf(qform.getClientId()));
+				intake.setIntakeStatus(KeyConstants.INTAKE_STATUS_ACTIVE);
+				intake.setStaffId((String) request.getSession().getAttribute(
+						KeyConstants.SESSION_KEY_PROVIDERNO));
+				intake.setYouth(KeyConstants.CONSTANT_NO);
+				intake.setVAW(KeyConstants.CONSTANT_NO);
+				request.setAttribute("isReadOnly", Boolean.FALSE);
+			}
+			com.quatro.web.intake.OptionList optionValues = intakeManager.LoadOptionsList(!readOnly);
+			qform.setOptionList(optionValues);
+	
+			Integer shelterId = (Integer) request.getSession().getAttribute(
+					KeyConstants.SESSION_KEY_SHELTERID);
+			ArrayList lst = (ArrayList) programManager.getProgramIds(shelterId,
+					(String) request.getSession().getAttribute(
+							KeyConstants.SESSION_KEY_PROVIDERNO));
+			ArrayList lst2 = new ArrayList();
+			ArrayList lst3 = new ArrayList();
+			for (int i = 0; i < lst.size(); i++) {
+				Object[] obj = (Object[]) lst.get(i);
+				// don't allow existing intake change program type
+				// if program type is wrong, discharge/reject this intake (for bed
+				// program), then create a new intake with correct program type.
+				if (intakeId.intValue() > 0) {
+					if (intake.getProgramType().equals((String) obj[2])) {
+						lst2.add(new LabelValueBean((String) obj[1],
+								((Integer) obj[0]).toString()));
+						lst3.add(new LabelValueBean((String) obj[2],
+								((Integer) obj[0]).toString()));
+					}
+				} else {
+					lst2.add(new LabelValueBean((String) obj[1], ((Integer) obj[0])
+							.toString()));
+					lst3.add(new LabelValueBean((String) obj[2], ((Integer) obj[0])
+							.toString()));
+				}
+			}
+			qform.setProgramList(lst2);
+			qform.setProgramTypeList(lst3);
+	
+			intake.setCurrentProgramId(intake.getProgramId());
+			qform.setIntake(intake);
+	
+			request.setAttribute("programId", intake.getProgramId());
+			ProgramQueue queue = programQueueManager
+					.getProgramQueuesByIntakeId(intake.getId());
+			if (queue != null)
+				request.setAttribute("queueId", queue.getId());
+	
+			LookupCodeValue language = null;
+			LookupCodeValue originalCountry = null;
+			if (intakeId.intValue() != 0) {
+				language = lookupManager.GetLookupCode("LNG", intake.getLanguage());
+				originalCountry = lookupManager.GetLookupCode("CNT", intake
+						.getOriginalCountry());
+			}
+			if (language == null)
+				language = new LookupCodeValue();
+			if (originalCountry == null)
+				originalCountry = new LookupCodeValue();
+	
+			qform.setLanguage(language);
+			qform.setOriginalCountry(originalCountry);
+	
+			setProgramEditable(request, intake, intakeHeadId);
+			request.setAttribute("PROGRAM_TYPE_Bed", KeyConstants.PROGRAM_TYPE_Bed);
+			super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+			return mapping.findForward("edit");
+	       }
+	       catch(NoAccessException e)
+	       {
+		       return mapping.findForward("failure");
+	       }
+	}
 
-		request.setAttribute("fromManualReferralId", request
-				.getParameter("fromManualReferralId"));
-
-		Demographic client;
-		if (Integer.parseInt(clientId) > 0) {
+	// for existing client
+	public ActionForward manualreferral(ActionMapping mapping, ActionForm form,
+			HttpServletRequest request, HttpServletResponse response) {
+		try {
+			QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
+	
+			String clientId = qform.getClientId();
+			Integer queueId = Integer.valueOf(request.getParameter("queueId"));
+			Integer programId = Integer.valueOf(request.getParameter("programId"));
+	
+			ProgramQueue queue = programQueueManager.getProgramQueue(queueId
+					.toString());
+			Integer referralId = queue.getReferralId();
+	
+			HashMap actionParam = new HashMap();
+			actionParam.put("clientId", clientId);
+			actionParam.put("intakeId", "0");
+			request.setAttribute("actionParam", actionParam);
+	
+			request.setAttribute("clientId", clientId);
+			request.setAttribute("fromManualReferralId", referralId);
+	
+			Demographic client;
 			client = clientManager.getClientByDemographicNo(clientId);
 			qform.setDob(MyDateFormat.getStandardDate(client.getDateOfBirth()));
-		} else {
-			client = new Demographic();
-			qform.setDob("");
-		}
-		qform.setClient(client);
-		request.setAttribute("client", client);
-
-		boolean readOnly = false;
-		QuatroIntake intake;
-		if (intakeId.intValue() != 0) {
-			intake = intakeManager.getQuatroIntake(intakeId);
-			if (KeyConstants.PROGRAM_TYPE_Service.equals(intake
-					.getProgramType())) {
-				if (intake.getEndDate() != null
-						&& intake.getEndDate().before(Calendar.getInstance()))
-					intake.setIntakeStatus(KeyConstants.STATUS_INACTIVE);
-			}
-			if (KeyConstants.INTAKE_STATUS_ADMITTED.equals(intake
-					.getIntakeStatus())) {
-				request.setAttribute("ageGenderReadOnly", Boolean.TRUE);
-			}
-			readOnly = super.isReadOnly(request, intake
-					.getIntakeStatus(), KeyConstants.FUN_CLIENTINTAKE, intake
-					.getProgramId());
-			request.setAttribute("isReadOnly", Boolean.valueOf(readOnly));
-		} else {
+			qform.setClient(client);
+			request.setAttribute("client", client);
+	
+			com.quatro.web.intake.OptionList optionValues = intakeManager
+					.LoadOptionsList(true);
+			qform.setOptionList(optionValues);
+	
+			QuatroIntake intake;
+	
 			intake = new QuatroIntake();
 			intake.setCreatedOn(Calendar.getInstance());
 			intake.setId(new Integer(0));
@@ -239,239 +359,143 @@ public class QuatroIntakeEditAction extends BaseClientAction {
 					KeyConstants.SESSION_KEY_PROVIDERNO));
 			intake.setYouth(KeyConstants.CONSTANT_NO);
 			intake.setVAW(KeyConstants.CONSTANT_NO);
-			request.setAttribute("isReadOnly", Boolean.FALSE);
-		}
-		com.quatro.web.intake.OptionList optionValues = intakeManager.LoadOptionsList(!readOnly);
-		qform.setOptionList(optionValues);
-
-		Integer shelterId = (Integer) request.getSession().getAttribute(
-				KeyConstants.SESSION_KEY_SHELTERID);
-		ArrayList lst = (ArrayList) programManager.getProgramIds(shelterId,
-				(String) request.getSession().getAttribute(
-						KeyConstants.SESSION_KEY_PROVIDERNO));
-		ArrayList lst2 = new ArrayList();
-		ArrayList lst3 = new ArrayList();
-		for (int i = 0; i < lst.size(); i++) {
-			Object[] obj = (Object[]) lst.get(i);
-			// don't allow existing intake change program type
-			// if program type is wrong, discharge/reject this intake (for bed
-			// program), then create a new intake with correct program type.
-			if (intakeId.intValue() > 0) {
-				if (intake.getProgramType().equals((String) obj[2])) {
-					lst2.add(new LabelValueBean((String) obj[1],
-							((Integer) obj[0]).toString()));
-					lst3.add(new LabelValueBean((String) obj[2],
-							((Integer) obj[0]).toString()));
-				}
-			} else {
+			intake.setProgramId(programId);
+	
+			Integer shelterId = (Integer) request.getSession().getAttribute(
+					KeyConstants.SESSION_KEY_SHELTERID);
+			ArrayList lst = (ArrayList) programManager.getProgramIds(shelterId,
+					(String) request.getSession().getAttribute(
+							KeyConstants.SESSION_KEY_PROVIDERNO));
+			ArrayList lst2 = new ArrayList();
+			ArrayList lst3 = new ArrayList();
+			for (int i = 0; i < lst.size(); i++) {
+				Object[] obj = (Object[]) lst.get(i);
 				lst2.add(new LabelValueBean((String) obj[1], ((Integer) obj[0])
 						.toString()));
 				lst3.add(new LabelValueBean((String) obj[2], ((Integer) obj[0])
 						.toString()));
 			}
-		}
-		qform.setProgramList(lst2);
-		qform.setProgramTypeList(lst3);
-
-		intake.setCurrentProgramId(intake.getProgramId());
-		qform.setIntake(intake);
-
-		request.setAttribute("programId", intake.getProgramId());
-		ProgramQueue queue = programQueueManager
-				.getProgramQueuesByIntakeId(intake.getId());
-		if (queue != null)
-			request.setAttribute("queueId", queue.getId());
-
-		LookupCodeValue language = null;
-		LookupCodeValue originalCountry = null;
-		if (intakeId.intValue() != 0) {
-			language = lookupManager.GetLookupCode("LNG", intake.getLanguage());
-			originalCountry = lookupManager.GetLookupCode("CNT", intake
-					.getOriginalCountry());
-		}
-		if (language == null)
-			language = new LookupCodeValue();
-		if (originalCountry == null)
-			originalCountry = new LookupCodeValue();
-
-		qform.setLanguage(language);
-		qform.setOriginalCountry(originalCountry);
-
-		setProgramEditable(request, intake, intakeHeadId);
-		request.setAttribute("PROGRAM_TYPE_Bed", KeyConstants.PROGRAM_TYPE_Bed);
-		super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-		return mapping.findForward("edit");
-	}
-
-	// for existing client
-	public ActionForward manualreferral(ActionMapping mapping, ActionForm form,
-			HttpServletRequest request, HttpServletResponse response) {
-		QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
-
-		String clientId = qform.getClientId();
-		Integer queueId = Integer.valueOf(request.getParameter("queueId"));
-		Integer programId = Integer.valueOf(request.getParameter("programId"));
-
-		ProgramQueue queue = programQueueManager.getProgramQueue(queueId
-				.toString());
-		Integer referralId = queue.getReferralId();
-
-		HashMap actionParam = new HashMap();
-		actionParam.put("clientId", clientId);
-		actionParam.put("intakeId", "0");
-		request.setAttribute("actionParam", actionParam);
-
-		request.setAttribute("clientId", clientId);
-		request.setAttribute("fromManualReferralId", referralId);
-
-		Demographic client;
-		client = clientManager.getClientByDemographicNo(clientId);
-		qform.setDob(MyDateFormat.getStandardDate(client.getDateOfBirth()));
-		qform.setClient(client);
-		request.setAttribute("client", client);
-
-		com.quatro.web.intake.OptionList optionValues = intakeManager
-				.LoadOptionsList(true);
-		qform.setOptionList(optionValues);
-
-		QuatroIntake intake;
-
-		intake = new QuatroIntake();
-		intake.setCreatedOn(Calendar.getInstance());
-		intake.setId(new Integer(0));
-		intake.setClientId(Integer.valueOf(qform.getClientId()));
-		intake.setIntakeStatus(KeyConstants.INTAKE_STATUS_ACTIVE);
-		intake.setStaffId((String) request.getSession().getAttribute(
-				KeyConstants.SESSION_KEY_PROVIDERNO));
-		intake.setYouth(KeyConstants.CONSTANT_NO);
-		intake.setVAW(KeyConstants.CONSTANT_NO);
-		intake.setProgramId(programId);
-
-		Integer shelterId = (Integer) request.getSession().getAttribute(
-				KeyConstants.SESSION_KEY_SHELTERID);
-		ArrayList lst = (ArrayList) programManager.getProgramIds(shelterId,
-				(String) request.getSession().getAttribute(
-						KeyConstants.SESSION_KEY_PROVIDERNO));
-		ArrayList lst2 = new ArrayList();
-		ArrayList lst3 = new ArrayList();
-		for (int i = 0; i < lst.size(); i++) {
-			Object[] obj = (Object[]) lst.get(i);
-			lst2.add(new LabelValueBean((String) obj[1], ((Integer) obj[0])
-					.toString()));
-			lst3.add(new LabelValueBean((String) obj[2], ((Integer) obj[0])
-					.toString()));
-		}
-		qform.setProgramList(lst2);
-		qform.setProgramTypeList(lst3);
-
-		intake.setCurrentProgramId(new Integer(0));
-		qform.setIntake(intake);
-
-		LookupCodeValue language = null;
-		LookupCodeValue originalCountry = null;
-		if (language == null)
-			language = new LookupCodeValue();
-		if (originalCountry == null)
-			originalCountry = new LookupCodeValue();
-
-		qform.setLanguage(language);
-		qform.setOriginalCountry(originalCountry);
-
-		setProgramEditable(request, intake, null);
-
-		request.setAttribute("PROGRAM_TYPE_Bed", KeyConstants.PROGRAM_TYPE_Bed);
-		super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-		return mapping.findForward("edit");
+			qform.setProgramList(lst2);
+			qform.setProgramTypeList(lst3);
+	
+			intake.setCurrentProgramId(new Integer(0));
+			qform.setIntake(intake);
+	
+			LookupCodeValue language = null;
+			LookupCodeValue originalCountry = null;
+			if (language == null)
+				language = new LookupCodeValue();
+			if (originalCountry == null)
+				originalCountry = new LookupCodeValue();
+	
+			qform.setLanguage(language);
+			qform.setOriginalCountry(originalCountry);
+	
+			setProgramEditable(request, intake, null);
+	
+			request.setAttribute("PROGRAM_TYPE_Bed", KeyConstants.PROGRAM_TYPE_Bed);
+			super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+			return mapping.findForward("edit");
+	       }
+	       catch(NoAccessException e)
+	       {
+		       return mapping.findForward("failure");
+	       }
 	}
 
 	public ActionForward programChange(ActionMapping mapping, ActionForm form,
 			HttpServletRequest request, HttpServletResponse response) {
 		ActionMessages messages = new ActionMessages();
-
-		QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
-		String clientId = qform.getClientId();
-		if (Utility.IsEmpty(clientId))
-			clientId = "0";
-		QuatroIntake intake = qform.getIntake();
-		Demographic client = qform.getClient();
-		String cd = request.getParameter("language_code");
-		if (!Utility.IsEmpty(cd)) {
-			LookupCodeValue lcv = lookupManager.GetLookupCode("LNG", cd);
-			qform.setLanguage(lcv);
-		}
-		cd = request.getParameter("originalCountry_code");
-		if (!Utility.IsEmpty(cd)) {
-			LookupCodeValue lcv = lookupManager.GetLookupCode("CNT", cd);
-			qform.setOriginalCountry(lcv);
-		}
-		if (KeyConstants.INTAKE_STATUS_ADMITTED
-				.equals(intake.getIntakeStatus())) {
-			request.setAttribute("ageGenderReadOnly", Boolean.TRUE);
-		}
-		if (!clientId.equals("") && !"0".equals(clientId)) {
-			List intakeHeads = intakeManager.getActiveIntakeByProgramByClient(
-					Integer.valueOf(clientId), intake.getProgramId());
-			for (int i = 0; i < intakeHeads.size(); i++) {
-				QuatroIntakeHeader qih = (QuatroIntakeHeader) intakeHeads
-						.get(i);
-				if (qih.getId().equals(intake.getId()))
-					continue;
-				if (qih.getProgramType().equals(
-						KeyConstants.SERVICE_PROGRAM_TYPE)) {
-					if (qih.getEndDate() != null
-							&& qih.getEndDate().before(Calendar.getInstance()))
+		try {
+			QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
+			String clientId = qform.getClientId();
+			if (Utility.IsEmpty(clientId))
+				clientId = "0";
+			QuatroIntake intake = qform.getIntake();
+			Demographic client = qform.getClient();
+			String cd = request.getParameter("language_code");
+			if (!Utility.IsEmpty(cd)) {
+				LookupCodeValue lcv = lookupManager.GetLookupCode("LNG", cd);
+				qform.setLanguage(lcv);
+			}
+			cd = request.getParameter("originalCountry_code");
+			if (!Utility.IsEmpty(cd)) {
+				LookupCodeValue lcv = lookupManager.GetLookupCode("CNT", cd);
+				qform.setOriginalCountry(lcv);
+			}
+			if (KeyConstants.INTAKE_STATUS_ADMITTED
+					.equals(intake.getIntakeStatus())) {
+				request.setAttribute("ageGenderReadOnly", Boolean.TRUE);
+			}
+			if (!clientId.equals("") && !"0".equals(clientId)) {
+				List intakeHeads = intakeManager.getActiveIntakeByProgramByClient(
+						Integer.valueOf(clientId), intake.getProgramId());
+				for (int i = 0; i < intakeHeads.size(); i++) {
+					QuatroIntakeHeader qih = (QuatroIntakeHeader) intakeHeads
+							.get(i);
+					if (qih.getId().equals(intake.getId()))
 						continue;
-					messages.add(ActionMessages.GLOBAL_MESSAGE,
-							new ActionMessage("error.intake.duplicated_intake",
-									request.getContextPath(), qih
-											.getProgramName()));
-					saveMessages(request, messages);
-					break;
-				} else if (qih.getProgramType().equals(
-						KeyConstants.BED_PROGRAM_TYPE)) {
-					messages.add(ActionMessages.GLOBAL_MESSAGE,
-							new ActionMessage("error.intake.duplicated_intake",
-									request.getContextPath(), qih
-											.getProgramName()));
-					saveMessages(request, messages);
-					break;
+					if (qih.getProgramType().equals(
+							KeyConstants.SERVICE_PROGRAM_TYPE)) {
+						if (qih.getEndDate() != null
+								&& qih.getEndDate().before(Calendar.getInstance()))
+							continue;
+						messages.add(ActionMessages.GLOBAL_MESSAGE,
+								new ActionMessage("error.intake.duplicated_intake",
+										request.getContextPath(), qih
+												.getProgramName()));
+						saveMessages(request, messages);
+						break;
+					} else if (qih.getProgramType().equals(
+							KeyConstants.BED_PROGRAM_TYPE)) {
+						messages.add(ActionMessages.GLOBAL_MESSAGE,
+								new ActionMessage("error.intake.duplicated_intake",
+										request.getContextPath(), qih
+												.getProgramName()));
+						saveMessages(request, messages);
+						break;
+					}
 				}
 			}
-		}
-
-		HashMap actionParam = new HashMap();
-		actionParam.put("clientId", clientId);
-		actionParam.put("intakeId", intake.getId().toString());
-		request.setAttribute("clientId", clientId);
-		request.setAttribute("actionParam", actionParam);
-		request.setAttribute("client", client);
-		request.setAttribute("fromManualReferralId", request
-				.getParameter("fromManualReferralId"));
-		String intakeHeadId = request.getParameter("intakeHeadId");
-		request.setAttribute("intakeHeadId", intakeHeadId);
-		if (Utility.IsEmpty(intakeHeadId))
-			intakeHeadId = "0";
-		setProgramEditable(request, intake, Integer.valueOf(intakeHeadId));
-
-		super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-		if (clientId.equals("")) {
-			request.setAttribute("pageChanged", "1");
-		} else {
-			if (intake.getId().intValue() == 0) {
+	
+			HashMap actionParam = new HashMap();
+			actionParam.put("clientId", clientId);
+			actionParam.put("intakeId", intake.getId().toString());
+			request.setAttribute("clientId", clientId);
+			request.setAttribute("actionParam", actionParam);
+			request.setAttribute("client", client);
+			request.setAttribute("fromManualReferralId", request
+					.getParameter("fromManualReferralId"));
+			String intakeHeadId = request.getParameter("intakeHeadId");
+			request.setAttribute("intakeHeadId", intakeHeadId);
+			if (Utility.IsEmpty(intakeHeadId))
+				intakeHeadId = "0";
+			setProgramEditable(request, intake, Integer.valueOf(intakeHeadId));
+	
+			super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+			if (clientId.equals("")) {
 				request.setAttribute("pageChanged", "1");
 			} else {
-				QuatroIntake cur_intake = intakeManager.getQuatroIntake(intake
-						.getId());
-				if (intake.getProgramId().equals(cur_intake.getProgramId())) {
-					request.setAttribute("pageChanged", "");
-				} else {
+				if (intake.getId().intValue() == 0) {
 					request.setAttribute("pageChanged", "1");
+				} else {
+					QuatroIntake cur_intake = intakeManager.getQuatroIntake(intake
+							.getId());
+					if (intake.getProgramId().equals(cur_intake.getProgramId())) {
+						request.setAttribute("pageChanged", "");
+					} else {
+						request.setAttribute("pageChanged", "1");
+					}
 				}
+				request.setAttribute("pageChanged", "1");
 			}
-			request.setAttribute("pageChanged", "1");
-		}
-
-		return mapping.findForward("edit");
+	
+			return mapping.findForward("edit");
+	       }
+	       catch(NoAccessException e)
+	       {
+		       return mapping.findForward("failure");
+	       }
 	}
 
 	private void setProgramEditable(HttpServletRequest request,
@@ -541,99 +565,127 @@ public class QuatroIntakeEditAction extends BaseClientAction {
 		boolean isError = false;
 		boolean isWarning = false;
 		Integer duplicatedReferralId = new Integer(0);
-		QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
-
-		Demographic client = qform.getClient();
-		QuatroIntake intake = qform.getIntake();
-		String providerNo = (String) request.getSession().getAttribute(
-				KeyConstants.SESSION_KEY_PROVIDERNO);
-		Integer intakeHeadId = new Integer(0);
-		if (!Utility.IsEmpty(request.getParameter("intakeHeadId")))
-			intakeHeadId = Integer
-					.valueOf(request.getParameter("intakeHeadId"));
-		request.setAttribute("intakeHeadId", request
-				.getParameter("intakeHeadId"));
-
-		setProgramEditable(request, intake, intakeHeadId);
-
-		// check for new client duplication
-		if (intake.getClientId().intValue() == 0
-				&& request.getParameter("newClientChecked").equals("N")
-				&& !validateDuplicate(intake, client, request, messages)) {
-			request.setAttribute("newClientFlag", "true");
-			HashMap actionParam2 = new HashMap();
-			actionParam2.put("clientId", intake.getClientId());
-			actionParam2.put("intakeId", intake.getId().toString());
-			request.setAttribute("actionParam", actionParam2);
-			request.setAttribute("fromManualReferralId", request
-					.getParameter("fromManualReferralId"));
-			super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-			return mapping.findForward("edit");
-		}
-		client.setDemographicNo(intake.getClientId());
-		client.setDateOfBirth(MyDateFormat.getCalendar(qform.getDob()));
-		client.setProviderNo(providerNo);
-		client.setLastUpdateDate(Calendar.getInstance());
-		if (qform.getClient().getEffDateTxt().equals("")) {
-			client.setEffDate(new Date());
-		} else {
-			client.setEffDate(MyDateFormat.getSysDate(qform.getClient()
-					.getEffDateTxt()));
-		}
-
-		/* intake */
-		if (null != intake.getEndDateTxt()) {
-			intake.setEndDate(MyDateFormat.getCalendar(intake.getEndDateTxt()));
-		}
-		intake.setLastUpdateDate(Calendar.getInstance());
-		// get program type
-		Program prog = programManager.getProgram(intake.getProgramId());
-		if (prog != null) {
-			intake.setProgramType(prog.getType());
-		}
-		// boolean programChange =
-		// !intake.getCurrentProgramId().equals(intake.getProgramId());
-		if (!"Y".equals(request
-				.getParameter(KeyConstants.CONFIRMATION_CHECKBOX_NAME))
-				&& KeyConstants.INTAKE_STATUS_ACTIVE.equals(intake
-						.getIntakeStatus())) {
-			isWarning = validateInputWarning(intake, client, request, messages);
-			// check service restriction
-			// if(programChange){
-			ProgramClientRestriction restrInPlace = clientRestrictionManager
-					.checkClientRestriction(intake.getProgramId(), intake
-							.getClientId(), new Date());
-			if (restrInPlace != null
-					&& request.getParameter("skipError") == null) {
-				List programs = qform.getProgramList();
-				for (int i = 0; i < programs.size(); i++) {
-					LabelValueBean obj3 = (LabelValueBean) programs.get(i);
-					if (obj3.getValue()
-							.equals(intake.getProgramId().toString())) {
-						if (intake.getProgramType().equals(
-								KeyConstants.BED_PROGRAM_TYPE)) {
-							messages
-									.add(
-											ActionMessages.GLOBAL_MESSAGE,
-											new ActionMessage(
-													"warning.intake.service_restriction",
-													request.getContextPath(),
-													obj3.getLabel()));
-							isWarning = true;
-							break;
-						} else {
-							messages.add(ActionMessages.GLOBAL_MESSAGE,
-									new ActionMessage(
-											"error.intake.service_restriction",
-											request.getContextPath(), obj3
-													.getLabel()));
-							isError = true;
-							break;
+		try {
+			QuatroIntakeEditForm qform = (QuatroIntakeEditForm) form;
+	
+			Demographic client = qform.getClient();
+			QuatroIntake intake = qform.getIntake();
+			String providerNo = (String) request.getSession().getAttribute(
+					KeyConstants.SESSION_KEY_PROVIDERNO);
+			Integer intakeHeadId = new Integer(0);
+			if (!Utility.IsEmpty(request.getParameter("intakeHeadId")))
+				intakeHeadId = Integer
+						.valueOf(request.getParameter("intakeHeadId"));
+			request.setAttribute("intakeHeadId", request
+					.getParameter("intakeHeadId"));
+	
+			setProgramEditable(request, intake, intakeHeadId);
+	
+			// check for new client duplication
+			if (intake.getClientId().intValue() == 0
+					&& request.getParameter("newClientChecked").equals("N")
+					&& !validateDuplicate(intake, client, request, messages)) {
+				request.setAttribute("newClientFlag", "true");
+				HashMap actionParam2 = new HashMap();
+				actionParam2.put("clientId", intake.getClientId());
+				actionParam2.put("intakeId", intake.getId().toString());
+				request.setAttribute("actionParam", actionParam2);
+				request.setAttribute("fromManualReferralId", request
+						.getParameter("fromManualReferralId"));
+				super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+				return mapping.findForward("edit");
+			}
+			client.setDemographicNo(intake.getClientId());
+			client.setDateOfBirth(MyDateFormat.getCalendar(qform.getDob()));
+			client.setProviderNo(providerNo);
+			client.setLastUpdateDate(Calendar.getInstance());
+			if (qform.getClient().getEffDateTxt().equals("")) {
+				client.setEffDate(new Date());
+			} else {
+				client.setEffDate(MyDateFormat.getSysDate(qform.getClient()
+						.getEffDateTxt()));
+			}
+	
+			/* intake */
+			if (null != intake.getEndDateTxt()) {
+				intake.setEndDate(MyDateFormat.getCalendar(intake.getEndDateTxt()));
+			}
+			intake.setLastUpdateDate(Calendar.getInstance());
+			// get program type
+			Program prog = programManager.getProgram(intake.getProgramId());
+			if (prog != null) {
+				intake.setProgramType(prog.getType());
+			}
+			// boolean programChange =
+			// !intake.getCurrentProgramId().equals(intake.getProgramId());
+			if (!"Y".equals(request
+					.getParameter(KeyConstants.CONFIRMATION_CHECKBOX_NAME))
+					&& KeyConstants.INTAKE_STATUS_ACTIVE.equals(intake
+							.getIntakeStatus())) {
+				isWarning = validateInputWarning(intake, client, request, messages);
+				// check service restriction
+				// if(programChange){
+				ProgramClientRestriction restrInPlace = clientRestrictionManager
+						.checkClientRestriction(intake.getProgramId(), intake
+								.getClientId(), new Date());
+				if (restrInPlace != null
+						&& request.getParameter("skipError") == null) {
+					List programs = qform.getProgramList();
+					for (int i = 0; i < programs.size(); i++) {
+						LabelValueBean obj3 = (LabelValueBean) programs.get(i);
+						if (obj3.getValue()
+								.equals(intake.getProgramId().toString())) {
+							if (intake.getProgramType().equals(
+									KeyConstants.BED_PROGRAM_TYPE)) {
+								messages
+										.add(
+												ActionMessages.GLOBAL_MESSAGE,
+												new ActionMessage(
+														"warning.intake.service_restriction",
+														request.getContextPath(),
+														obj3.getLabel()));
+								isWarning = true;
+								break;
+							} else {
+								messages.add(ActionMessages.GLOBAL_MESSAGE,
+										new ActionMessage(
+												"error.intake.service_restriction",
+												request.getContextPath(), obj3
+														.getLabel()));
+								isError = true;
+								break;
+							}
 						}
 					}
+	
+					if (isError) {
+						saveMessages(request, messages);
+						HashMap actionParam = new HashMap();
+						actionParam.put("clientId", client.getDemographicNo());
+						actionParam.put("intakeId", intake.getId().toString());
+						if (intakeHeadId.intValue() != 0) {
+							Integer intakeHeadClientId = intakeManager
+									.getQuatroIntakeDBByIntakeId(intakeHeadId)
+									.getClientId();
+							request.setAttribute("clientId", intakeHeadClientId);
+						} else {
+							request.setAttribute("clientId", client
+									.getDemographicNo());
+						}
+						request.setAttribute("actionParam", actionParam);
+						request.setAttribute("client", client);
+						intake.setClientId(client.getDemographicNo());
+						request.setAttribute("fromManualReferralId", request
+								.getParameter("fromManualReferralId"));
+						super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+						return mapping.findForward("edit");
+					}
 				}
-
-				if (isError) {
+				// }
+				if (isWarning) {
+					messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
+							"warning.intake.overwrite_conflict", request
+									.getContextPath()));
 					saveMessages(request, messages);
 					HashMap actionParam = new HashMap();
 					actionParam.put("clientId", client.getDemographicNo());
@@ -644,8 +696,7 @@ public class QuatroIntakeEditAction extends BaseClientAction {
 								.getClientId();
 						request.setAttribute("clientId", intakeHeadClientId);
 					} else {
-						request.setAttribute("clientId", client
-								.getDemographicNo());
+						request.setAttribute("clientId", client.getDemographicNo());
 					}
 					request.setAttribute("actionParam", actionParam);
 					request.setAttribute("client", client);
@@ -656,11 +707,21 @@ public class QuatroIntakeEditAction extends BaseClientAction {
 					return mapping.findForward("edit");
 				}
 			}
-			// }
-			if (isWarning) {
-				messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
-						"warning.intake.overwrite_conflict", request
-								.getContextPath()));
+	
+			// check service program end date
+			if (intake.getEndDate() != null
+					&& MyDateFormat.isBefore(intake.getEndDate(), Calendar
+							.getInstance())) {
+				if (intake.getProgramType().equals(
+						KeyConstants.SERVICE_PROGRAM_TYPE))
+					messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
+							"warning.intake.serviceprogram_enddate", request
+									.getContextPath()));
+				else if (intake.getProgramType().equals(
+						KeyConstants.BED_PROGRAM_TYPE))
+					messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
+							"warning.intake.bedprogram_enddate", request
+									.getContextPath()));
 				saveMessages(request, messages);
 				HashMap actionParam = new HashMap();
 				actionParam.put("clientId", client.getDemographicNo());
@@ -678,240 +739,209 @@ public class QuatroIntakeEditAction extends BaseClientAction {
 				intake.setClientId(client.getDemographicNo());
 				request.setAttribute("fromManualReferralId", request
 						.getParameter("fromManualReferralId"));
+				setProgramEditable(request, intake, intakeHeadId);
 				super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
 				return mapping.findForward("edit");
 			}
-		}
-
-		// check service program end date
-		if (intake.getEndDate() != null
-				&& MyDateFormat.isBefore(intake.getEndDate(), Calendar
-						.getInstance())) {
-			if (intake.getProgramType().equals(
-					KeyConstants.SERVICE_PROGRAM_TYPE))
+	
+			if (!intake.getClientId().equals("")
+					&& !"0".equals(intake.getClientId())) {
+				List intakeHeads = intakeManager.getActiveIntakeByProgramByClient(
+						intake.getClientId(), intake.getProgramId());
+				for (int i = 0; i < intakeHeads.size(); i++) {
+					QuatroIntakeHeader qih = (QuatroIntakeHeader) intakeHeads
+							.get(i);
+					if (qih.getId().equals(intake.getId()))
+						continue;
+					if (qih.getProgramType().equals(
+							KeyConstants.SERVICE_PROGRAM_TYPE)) {
+						if (qih.getEndDate() != null
+								&& qih.getEndDate().before(Calendar.getInstance()))
+							continue;
+						messages.add(ActionMessages.GLOBAL_MESSAGE,
+								new ActionMessage("error.intake.duplicated_intake",
+										request.getContextPath(), qih
+												.getProgramName()));
+						saveMessages(request, messages);
+	
+						HashMap actionParam = new HashMap();
+						actionParam.put("clientId", client.getDemographicNo());
+						actionParam.put("intakeId", intake.getId().toString());
+						request.setAttribute("clientId", client.getDemographicNo());
+						request.setAttribute("actionParam", actionParam);
+						request.setAttribute("client", client);
+						request.setAttribute("fromManualReferralId", request
+								.getParameter("fromManualReferralId"));
+						super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+						return mapping.findForward("edit");
+					} else if (qih.getProgramType().equals(
+							KeyConstants.BED_PROGRAM_TYPE)) {
+						messages.add(ActionMessages.GLOBAL_MESSAGE,
+								new ActionMessage("error.intake.duplicated_intake",
+										request.getContextPath(), qih
+												.getProgramName()));
+						saveMessages(request, messages);
+						HashMap actionParam = new HashMap();
+						actionParam.put("clientId", client.getDemographicNo());
+						actionParam.put("intakeId", intake.getId().toString());
+						request.setAttribute("clientId", client.getDemographicNo());
+						request.setAttribute("actionParam", actionParam);
+						request.setAttribute("client", client);
+						request.setAttribute("fromManualReferralId", request
+								.getParameter("fromManualReferralId"));
+						super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
+						return mapping.findForward("edit");
+					}
+				}
+			}
+	
+			if (intake.getCreatedOnTxt().equals("") == false) {
+				intake.setCreatedOn(MyDateFormat.getCalendarwithTime(intake
+						.getCreatedOnTxt()));
+			} else {
+				Calendar cal = Calendar.getInstance();
+				intake.setCreatedOn(cal);
+				intake.setCreatedOnTxt(MyDateFormat.getStandardDateTime(cal));
+			}
+	
+			if (intake.getId().intValue() == 0)
+				intake.setIntakeStatus(KeyConstants.INTAKE_STATUS_ACTIVE);
+			intake.setLanguage(request.getParameter("language_code"));
+			intake.setOriginalCountry(request.getParameter("originalCountry_code"));
+	
+			intake.setPregnant(request.getParameter("intake.pregnant"));
+			intake.setDisclosedAbuse(request.getParameter("intake.disclosedAbuse"));
+			intake.setObservedAbuse(request.getParameter("intake.observedAbuse"));
+			intake.setDisclosedMentalIssue(request
+					.getParameter("intake.disclosedMentalIssue"));
+			intake.setPoorHygiene(request.getParameter("intake.poorHygiene"));
+			intake.setObservedMentalIssue(request
+					.getParameter("intake.observedMentalIssue"));
+			intake.setDisclosedAlcoholAbuse(request
+					.getParameter("intake.disclosedAlcoholAbuse"));
+			intake.setObservedAlcoholAbuse(request
+					.getParameter("intake.observedAlcoholAbuse"));
+			intake.setBirthCertificateYN(request
+					.getParameter("intake.birthCertificateYN"));
+			intake.setSINYN(request.getParameter("intake.SINYN"));
+			intake.setHealthCardNoYN(request.getParameter("intake.healthCardNoYN"));
+			intake.setDriverLicenseNoYN(request
+					.getParameter("intake.driverLicenseNoYN"));
+			intake.setCitizenCardNoYN(request
+					.getParameter("intake.citizenCardNoYN"));
+			intake.setNativeReserveNoYN(request
+					.getParameter("intake.nativeReserveNoYN"));
+			intake.setVeteranNoYN(request.getParameter("intake.veteranNoYN"));
+			intake.setRecordLandingYN(request
+					.getParameter("intake.recordLandingYN"));
+			intake.setLibraryCardYN(request.getParameter("intake.libraryCardYN"));
+			intake.setStaffId(providerNo);
+			intake.setLastUpdateDate(new GregorianCalendar());
+			String sourceIncome = request.getParameter("intake.sourceIncome");
+			if (Utility.IsEmpty(sourceIncome)) {
+				intake.setSourceIncome(new String[] {});
+			}
+			LookupCodeValue language = new LookupCodeValue();
+			language.setCode(request.getParameter("language_code"));
+			language.setDescription(request.getParameter("language_description"));
+			LookupCodeValue originalCountry = new LookupCodeValue();
+			originalCountry.setCode(request.getParameter("originalCountry_code"));
+			originalCountry.setDescription(request
+					.getParameter("originalCountry_description"));
+			qform.setLanguage(language);
+			qform.setOriginalCountry(originalCountry);
+	
+			Integer shelterId = (Integer) request.getSession().getAttribute(
+					KeyConstants.SESSION_KEY_SHELTERID);
+	
+			// no more than one mannual referral exists for same clientId and
+			// programId.
+			boolean intakeExist = false; // flag for same clientId and programId
+			if (!intake.getClientId().equals("")) {
+				List queues = programQueueManager
+						.getProgramQueuesByClientIdProgramId(intake.getClientId(),
+								intake.getProgramId());
+				if (queues.size() > 0) {
+					ProgramQueue queue = (ProgramQueue) queues.get(0);
+					if (queue.getFromIntakeId() == null) {
+						duplicatedReferralId = queue.getReferralId();
+					} else {
+						if (intake.getId() != null && intake.getId().intValue() > 0
+								&& !queue.getFromIntakeId().equals(intake.getId()))
+							intakeExist = true;
+					}
+				}
+			}
+	
+			if (intake.getId().intValue() == 0
+					&& intakeManager.checkExistBedIntakeByFacility(
+							intake.getClientId(), intake.getProgramId()).size() > 0) {
 				messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
-						"warning.intake.serviceprogram_enddate", request
+						"error.intake.duplicate_bedprogram_intake", request
 								.getContextPath()));
-			else if (intake.getProgramType().equals(
-					KeyConstants.BED_PROGRAM_TYPE))
-				messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
-						"warning.intake.bedprogram_enddate", request
-								.getContextPath()));
-			saveMessages(request, messages);
+				isError = true;
+			} else if (intakeExist) {
+				messages.add(ActionMessages.GLOBAL_MESSAGE,
+						new ActionMessage("error.referral.duplicated_queue",
+								request.getContextPath()));
+				isError = true;
+			} else {
+				Integer fromManualReferralId = null;
+				if (!request.getParameter("fromManualReferralId").equals(""))
+					fromManualReferralId = new Integer(request
+							.getParameter("fromManualReferralId"));
+	
+				if (duplicatedReferralId.intValue() > 0
+						&& fromManualReferralId == null)
+					fromManualReferralId = duplicatedReferralId;
+				boolean isFamilyMember = (intakeHeadId.intValue()>0 && intake.getId().intValue() != intakeHeadId.intValue() );
+	//			boolean isFamilityMember = (intakeHeadId.intValue() > 0);
+				ArrayList lst2 = intakeManager.saveQuatroIntake(client, intake,
+						intakeHeadId, isFamilyMember,
+						fromManualReferralId);
+				Integer intakeId = (Integer) lst2.get(0);
+				Integer queueId = new Integer(0);
+				if (lst2.get(2) != null)
+					queueId = (Integer) lst2.get(2);
+				intake.setId(intakeId);
+				intake.setCurrentProgramId(intake.getProgramId());
+				qform.setIntake(intake);
+				request.setAttribute("programId", intake.getProgramId());
+				request.setAttribute("queueId", queueId);
+	
+			}
+	
 			HashMap actionParam = new HashMap();
 			actionParam.put("clientId", client.getDemographicNo());
 			actionParam.put("intakeId", intake.getId().toString());
-			if (intakeHeadId.intValue() != 0) {
-				Integer intakeHeadClientId = intakeManager
-						.getQuatroIntakeDBByIntakeId(intakeHeadId)
-						.getClientId();
-				request.setAttribute("clientId", intakeHeadClientId);
-			} else {
-				request.setAttribute("clientId", client.getDemographicNo());
-			}
+			request.setAttribute("clientId", client.getDemographicNo());
 			request.setAttribute("actionParam", actionParam);
 			request.setAttribute("client", client);
-			intake.setClientId(client.getDemographicNo());
 			request.setAttribute("fromManualReferralId", request
 					.getParameter("fromManualReferralId"));
+	
+			if (!(isWarning || isError)) {
+				if (duplicatedReferralId.intValue() > 0)
+					messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
+							"message.intake.saved_with_duplicated_queue", request
+									.getContextPath()));
+				messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
+						"message.save.success", request.getContextPath()));
+			} else if (isWarning) {
+				messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
+						"warning.intake.saved_with_warning"));
+			}
+			saveMessages(request, messages);
+			request.setAttribute("pageChanged", "");
+			request.setAttribute("PROGRAM_TYPE_Bed", KeyConstants.PROGRAM_TYPE_Bed);
 			setProgramEditable(request, intake, intakeHeadId);
 			super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
 			return mapping.findForward("edit");
-		}
-
-		if (!intake.getClientId().equals("")
-				&& !"0".equals(intake.getClientId())) {
-			List intakeHeads = intakeManager.getActiveIntakeByProgramByClient(
-					intake.getClientId(), intake.getProgramId());
-			for (int i = 0; i < intakeHeads.size(); i++) {
-				QuatroIntakeHeader qih = (QuatroIntakeHeader) intakeHeads
-						.get(i);
-				if (qih.getId().equals(intake.getId()))
-					continue;
-				if (qih.getProgramType().equals(
-						KeyConstants.SERVICE_PROGRAM_TYPE)) {
-					if (qih.getEndDate() != null
-							&& qih.getEndDate().before(Calendar.getInstance()))
-						continue;
-					messages.add(ActionMessages.GLOBAL_MESSAGE,
-							new ActionMessage("error.intake.duplicated_intake",
-									request.getContextPath(), qih
-											.getProgramName()));
-					saveMessages(request, messages);
-
-					HashMap actionParam = new HashMap();
-					actionParam.put("clientId", client.getDemographicNo());
-					actionParam.put("intakeId", intake.getId().toString());
-					request.setAttribute("clientId", client.getDemographicNo());
-					request.setAttribute("actionParam", actionParam);
-					request.setAttribute("client", client);
-					request.setAttribute("fromManualReferralId", request
-							.getParameter("fromManualReferralId"));
-					super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-					return mapping.findForward("edit");
-				} else if (qih.getProgramType().equals(
-						KeyConstants.BED_PROGRAM_TYPE)) {
-					messages.add(ActionMessages.GLOBAL_MESSAGE,
-							new ActionMessage("error.intake.duplicated_intake",
-									request.getContextPath(), qih
-											.getProgramName()));
-					saveMessages(request, messages);
-					HashMap actionParam = new HashMap();
-					actionParam.put("clientId", client.getDemographicNo());
-					actionParam.put("intakeId", intake.getId().toString());
-					request.setAttribute("clientId", client.getDemographicNo());
-					request.setAttribute("actionParam", actionParam);
-					request.setAttribute("client", client);
-					request.setAttribute("fromManualReferralId", request
-							.getParameter("fromManualReferralId"));
-					super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-					return mapping.findForward("edit");
-				}
-			}
-		}
-
-		if (intake.getCreatedOnTxt().equals("") == false) {
-			intake.setCreatedOn(MyDateFormat.getCalendarwithTime(intake
-					.getCreatedOnTxt()));
-		} else {
-			Calendar cal = Calendar.getInstance();
-			intake.setCreatedOn(cal);
-			intake.setCreatedOnTxt(MyDateFormat.getStandardDateTime(cal));
-		}
-
-		if (intake.getId().intValue() == 0)
-			intake.setIntakeStatus(KeyConstants.INTAKE_STATUS_ACTIVE);
-		intake.setLanguage(request.getParameter("language_code"));
-		intake.setOriginalCountry(request.getParameter("originalCountry_code"));
-
-		intake.setPregnant(request.getParameter("intake.pregnant"));
-		intake.setDisclosedAbuse(request.getParameter("intake.disclosedAbuse"));
-		intake.setObservedAbuse(request.getParameter("intake.observedAbuse"));
-		intake.setDisclosedMentalIssue(request
-				.getParameter("intake.disclosedMentalIssue"));
-		intake.setPoorHygiene(request.getParameter("intake.poorHygiene"));
-		intake.setObservedMentalIssue(request
-				.getParameter("intake.observedMentalIssue"));
-		intake.setDisclosedAlcoholAbuse(request
-				.getParameter("intake.disclosedAlcoholAbuse"));
-		intake.setObservedAlcoholAbuse(request
-				.getParameter("intake.observedAlcoholAbuse"));
-		intake.setBirthCertificateYN(request
-				.getParameter("intake.birthCertificateYN"));
-		intake.setSINYN(request.getParameter("intake.SINYN"));
-		intake.setHealthCardNoYN(request.getParameter("intake.healthCardNoYN"));
-		intake.setDriverLicenseNoYN(request
-				.getParameter("intake.driverLicenseNoYN"));
-		intake.setCitizenCardNoYN(request
-				.getParameter("intake.citizenCardNoYN"));
-		intake.setNativeReserveNoYN(request
-				.getParameter("intake.nativeReserveNoYN"));
-		intake.setVeteranNoYN(request.getParameter("intake.veteranNoYN"));
-		intake.setRecordLandingYN(request
-				.getParameter("intake.recordLandingYN"));
-		intake.setLibraryCardYN(request.getParameter("intake.libraryCardYN"));
-		intake.setStaffId(providerNo);
-		intake.setLastUpdateDate(new GregorianCalendar());
-		String sourceIncome = request.getParameter("intake.sourceIncome");
-		if (Utility.IsEmpty(sourceIncome)) {
-			intake.setSourceIncome(new String[] {});
-		}
-		LookupCodeValue language = new LookupCodeValue();
-		language.setCode(request.getParameter("language_code"));
-		language.setDescription(request.getParameter("language_description"));
-		LookupCodeValue originalCountry = new LookupCodeValue();
-		originalCountry.setCode(request.getParameter("originalCountry_code"));
-		originalCountry.setDescription(request
-				.getParameter("originalCountry_description"));
-		qform.setLanguage(language);
-		qform.setOriginalCountry(originalCountry);
-
-		Integer shelterId = (Integer) request.getSession().getAttribute(
-				KeyConstants.SESSION_KEY_SHELTERID);
-
-		// no more than one mannual referral exists for same clientId and
-		// programId.
-		boolean intakeExist = false; // flag for same clientId and programId
-		if (!intake.getClientId().equals("")) {
-			List queues = programQueueManager
-					.getProgramQueuesByClientIdProgramId(intake.getClientId(),
-							intake.getProgramId());
-			if (queues.size() > 0) {
-				ProgramQueue queue = (ProgramQueue) queues.get(0);
-				if (queue.getFromIntakeId() == null) {
-					duplicatedReferralId = queue.getReferralId();
-				} else {
-					if (intake.getId() != null && intake.getId().intValue() > 0
-							&& !queue.getFromIntakeId().equals(intake.getId()))
-						intakeExist = true;
-				}
-			}
-		}
-
-		if (intake.getId().intValue() == 0
-				&& intakeManager.checkExistBedIntakeByFacility(
-						intake.getClientId(), intake.getProgramId()).size() > 0) {
-			messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
-					"error.intake.duplicate_bedprogram_intake", request
-							.getContextPath()));
-			isError = true;
-		} else if (intakeExist) {
-			messages.add(ActionMessages.GLOBAL_MESSAGE,
-					new ActionMessage("error.referral.duplicated_queue",
-							request.getContextPath()));
-			isError = true;
-		} else {
-			Integer fromManualReferralId = null;
-			if (!request.getParameter("fromManualReferralId").equals(""))
-				fromManualReferralId = new Integer(request
-						.getParameter("fromManualReferralId"));
-
-			if (duplicatedReferralId.intValue() > 0
-					&& fromManualReferralId == null)
-				fromManualReferralId = duplicatedReferralId;
-			boolean isFamilyMember = (intakeHeadId.intValue()>0 && intake.getId().intValue() != intakeHeadId.intValue() );
-//			boolean isFamilityMember = (intakeHeadId.intValue() > 0);
-			ArrayList lst2 = intakeManager.saveQuatroIntake(client, intake,
-					intakeHeadId, isFamilyMember,
-					fromManualReferralId);
-			Integer intakeId = (Integer) lst2.get(0);
-			Integer queueId = new Integer(0);
-			if (lst2.get(2) != null)
-				queueId = (Integer) lst2.get(2);
-			intake.setId(intakeId);
-			intake.setCurrentProgramId(intake.getProgramId());
-			qform.setIntake(intake);
-			request.setAttribute("programId", intake.getProgramId());
-			request.setAttribute("queueId", queueId);
-
-		}
-
-		HashMap actionParam = new HashMap();
-		actionParam.put("clientId", client.getDemographicNo());
-		actionParam.put("intakeId", intake.getId().toString());
-		request.setAttribute("clientId", client.getDemographicNo());
-		request.setAttribute("actionParam", actionParam);
-		request.setAttribute("client", client);
-		request.setAttribute("fromManualReferralId", request
-				.getParameter("fromManualReferralId"));
-
-		if (!(isWarning || isError)) {
-			if (duplicatedReferralId.intValue() > 0)
-				messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
-						"message.intake.saved_with_duplicated_queue", request
-								.getContextPath()));
-			messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
-					"message.save.success", request.getContextPath()));
-		} else if (isWarning) {
-			messages.add(ActionMessages.GLOBAL_MESSAGE, new ActionMessage(
-					"warning.intake.saved_with_warning"));
-		}
-		saveMessages(request, messages);
-		request.setAttribute("pageChanged", "");
-		request.setAttribute("PROGRAM_TYPE_Bed", KeyConstants.PROGRAM_TYPE_Bed);
-		setProgramEditable(request, intake, intakeHeadId);
-		super.setScreenMode(request, KeyConstants.TAB_CLIENT_INTAKE);
-		return mapping.findForward("edit");
+	       }
+	       catch(NoAccessException e)
+	       {
+		       return mapping.findForward("failure");
+	       }
 	}
 
 	public ClientManager getClientManager() {
